--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -123,7 +123,11 @@
           </div>
           <div class="col-lg-9 col-md-9">
             <div class="feature-img">
-              <img class="img-fluid" src="{% static 'img/blog/feature-img1.jpg' %}" alt="" />
+              <img
+                class="img-fluid"
+                src="{% static 'img/blog/feature-img1.jpg' %}"
+                alt=""
+              />
             </div>
             <a class="posts-title" href="blog-single.html"
               ><h3>Astronomy Binoculars A Great Alternative</h3></a
@@ -165,7 +169,11 @@
           </div>
           <div class="col-lg-9 col-md-9">
             <div class="feature-img">
-              <img class="img-fluid" src="{% static 'img/blog/feature-img2.jpg' %}" alt="" />
+              <img
+                class="img-fluid"
+                src="{% static 'img/blog/feature-img2.jpg' %}"
+                alt=""
+              />
             </div>
             <a class="posts-title" href="blog-single.html"
               ><h3>The Basics Of Buying A Telescope</h3></a
@@ -207,7 +215,11 @@
           </div>
           <div class="col-lg-9 col-md-9">
             <div class="feature-img">
-              <img class="img-fluid" src="{% static 'img/blog/feature-img4.jpg' %}" alt="" />
+              <img
+                class="img-fluid"
+                src="{% static 'img/blog/feature-img4.jpg' %}"
+                alt=""
+              />
             </div>
             <a class="posts-title" href="blog-single.html"
               ><h3>The Night Sky</h3></a
@@ -249,7 +261,11 @@
           </div>
           <div class="col-lg-9 col-md-9">
             <div class="feature-img">
-              <img class="img-fluid" src="{% static 'img/blog/feature-img5.jpg' %}" alt="" />
+              <img
+                class="img-fluid"
+                src="{% static 'img/blog/feature-img5.jpg' %}"
+                alt=""
+              />
             </div>
             <a class="posts-title" href="blog-single.html"
               ><h3>Telescopes 101</h3></a
@@ -333,7 +349,11 @@
             <div class="popular-post-list">
               <div class="single-post-list d-flex flex-row align-items-center">
                 <div class="thumb">
-                  <img class="img-fluid" src="{% static 'img/blog/pp1.jpg' %}" alt="" />
+                  <img
+                    class="img-fluid"
+                    src="{% static 'img/blog/pp1.jpg' %}"
+                    alt=""
+                  />
                 </div>
                 <div class="details">
                   <a href="blog-single.html"
@@ -344,7 +364,11 @@
               </div>
               <div class="single-post-list d-flex flex-row align-items-center">
                 <div class="thumb">
-                  <img class="img-fluid" src="{% static 'img/blog/pp2.jpg' %}" alt="" />
+                  <img
+                    class="img-fluid"
+                    src="{% static 'img/blog/pp2.jpg' %}"
+                    alt=""
+                  />
                 </div>
                 <div class="details">
                   <a href="blog-single.html"><h6>The Amazing Hubble</h6></a>
@@ -353,7 +377,11 @@
               </div>
               <div class="single-post-list d-flex flex-row align-items-center">
                 <div class="thumb">
-                  <img class="img-fluid" src="{% static 'img/blog/pp3.jpg' %}" alt="" />
+                  <img
+                    class="img-fluid"
+                    src="{% static 'img/blog/pp3.jpg' %}"
+                    alt=""
+                  />
                 </div>
                 <div class="details">
                   <a href="blog-single.html"><h6>Astronomy Or Astrology</h6></a>
@@ -362,7 +390,11 @@
               </div>
               <div class="single-post-list d-flex flex-row align-items-center">
                 <div class="thumb">
-                  <img class="img-fluid" src="{% static 'img/blog/pp4.jpg' %}" alt="" />
+                  <img
+                    class="img-fluid"
+                    src="{% static 'img/blog/pp4.jpg' %}"
+                    alt=""
+                  />
                 </div>
                 <div class="details">
                   <a href="blog-single.html"><h6>Asteroids telescope</h6></a>
@@ -373,7 +405,10 @@
           </div>
           <div class="single-sidebar-widget ads-widget">
             <a href="#"
-              ><img class="img-fluid" src="{% static 'img/blog/ads-banner.jpg' %}" alt=""
+              ><img
+                class="img-fluid"
+                src="{% static 'img/blog/ads-banner.jpg' %}"
+                alt=""
             /></a>
           </div>
           <div class="single-sidebar-widget post-category-widget">
