--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,11 @@
     <link rel="stylesheet" href="{% static 'css/animate.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/owl.carousel.css' %}" />
     <link rel="stylesheet" href="{% static 'css/main.css' %}" />
+	<style>
+		img{
+			border-radius: 10px;
+		}
+	</style>
   </head>
   <body>
     <header id="header">
