--- a/templates/test.html
+++ b/templates/test.html
@@ -6,10 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    {{posts}}
-    {% for post in posts %}
-    <h1>{{post}}</h1>
-    <p>{{post.content}}</p>
-    {% endfor %}
+    {{post.title}}
 </body>
 </html>
