--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -5,13 +5,13 @@
   <div class="container">
     <div class="row d-flex align-items-center justify-content-center">
       <div class="about-content col-lg-12">
-        <h1 class="text-white">Blog Details Page</h1>
+        <h1 class="text-white">{{post.title}}</h1>
         <p class="text-white link-nav">
-          <a href="index.html">Home </a>
+          <a href="{% url 'website:home' %}">Home </a>
           <span class="lnr lnr-arrow-right"></span
-          ><a href="blog-home.html">Blog </a>
+          ><a href="{% url 'blog:home' %}">Blog </a>
           <span class="lnr lnr-arrow-right"></span>
-          <a href="blog-single.html"> Blog Details Page</a>
+          {{post.title}}
         </p>
       </div>
     </div>
@@ -27,7 +27,11 @@
         <div class="single-post row">
           <div class="col-lg-12">
             <div class="feature-img">
-              <img class="img-fluid" src="{% static 'img/blog/feature-img1.jpg' %}" alt="" />
+              <img
+                class="img-fluid"
+                src="{% static 'img/blog/feature-img1.jpg' %}"
+                alt=""
+              />
             </div>
           </div>
           <div class="col-lg-3 col-md-3 meta-details">
@@ -70,64 +74,8 @@
             </div>
           </div>
           <div class="col-lg-9 col-md-9">
-            <h3 class="mt-20 mb-20">
-              Astronomy Binoculars A Great Alternative
-            </h3>
-            <p class="excert">
-              MCSE boot camps have its supporters and its detractors. Some
-              people do not understand why you should have to spend money on
-              boot camp when you can get the MCSE study materials yourself at a
-              fraction.
-            </p>
-            <p>
-              Boot camps have its supporters and its detractors. Some people do
-              not understand why you should have to spend money on boot camp
-              when you can get the MCSE study materials yourself at a fraction
-              of the camp price. However, who has the willpower to actually sit
-              through a self-imposed MCSE training. who has the willpower to
-              actually sit through a self-imposed
-            </p>
-            <p>
-              Boot camps have its supporters and its detractors. Some people do
-              not understand why you should have to spend money on boot camp
-              when you can get the MCSE study materials yourself at a fraction
-              of the camp price. However, who has the willpower to actually sit
-              through a self-imposed MCSE training. who has the willpower to
-              actually sit through a self-imposed
-            </p>
-          </div>
-          <div class="col-lg-12">
-            <div class="quotes">
-              MCSE boot camps have its supporters and its detractors. Some
-              people do not understand why you should have to spend money on
-              boot camp when you can get the MCSE study materials yourself at a
-              fraction of the camp price. However, who has the willpower to
-              actually sit through a self-imposed MCSE training.
-            </div>
-            <div class="row mt-30 mb-30">
-              <div class="col-6">
-                <img class="img-fluid" src="{% static 'img/blog/post-img1.jpg' %}" alt="" />
-              </div>
-              <div class="col-6">
-                <img class="img-fluid" src="{% static 'img/blog/post-img2.jpg' %}" alt="" />
-              </div>
-              <div class="col-lg-12 mt-30">
-                <p>
-                  MCSE boot camps have its supporters and its detractors. Some
-                  people do not understand why you should have to spend money on
-                  boot camp when you can get the MCSE study materials yourself
-                  at a fraction of the camp price. However, who has the
-                  willpower.
-                </p>
-                <p>
-                  MCSE boot camps have its supporters and its detractors. Some
-                  people do not understand why you should have to spend money on
-                  boot camp when you can get the MCSE study materials yourself
-                  at a fraction of the camp price. However, who has the
-                  willpower.
-                </p>
-              </div>
-            </div>
+            <h3 class="mt-20 mb-20">{{post.title}}</h3>
+            <p class="excert">{{post.content}}</p>
           </div>
         </div>
         <div class="navigation-area">
@@ -137,7 +85,10 @@
             >
               <div class="thumb">
                 <a href="#"
-                  ><img class="img-fluid" src="{% static 'img/blog/prev.jpg' %}" alt=""
+                  ><img
+                    class="img-fluid"
+                    src="{% static 'img/blog/prev.jpg' %}"
+                    alt=""
                 /></a>
               </div>
               <div class="arrow">
@@ -164,7 +115,10 @@
               </div>
               <div class="thumb">
                 <a href="#"
-                  ><img class="img-fluid" src="{% static 'img/blog/next.jpg' %}" alt=""
+                  ><img
+                    class="img-fluid"
+                    src="{% static 'img/blog/next.jpg' %}"
+                    alt=""
                 /></a>
               </div>
             </div>
@@ -352,7 +306,11 @@
             <div class="popular-post-list">
               <div class="single-post-list d-flex flex-row align-items-center">
                 <div class="thumb">
-                  <img class="img-fluid" src="{% static 'img/blog/pp1.jpg' %}" alt="" />
+                  <img
+                    class="img-fluid"
+                    src="{% static 'img/blog/pp1.jpg' %}"
+                    alt=""
+                  />
                 </div>
                 <div class="details">
                   <a href="blog-single.html"
@@ -363,7 +321,11 @@
               </div>
               <div class="single-post-list d-flex flex-row align-items-center">
                 <div class="thumb">
-                  <img class="img-fluid" src="{% static 'img/blog/pp2.jpg' %}" alt="" />
+                  <img
+                    class="img-fluid"
+                    src="{% static 'img/blog/pp2.jpg' %}"
+                    alt=""
+                  />
                 </div>
                 <div class="details">
                   <a href="blog-single.html"><h6>The Amazing Hubble</h6></a>
@@ -372,7 +334,11 @@
               </div>
               <div class="single-post-list d-flex flex-row align-items-center">
                 <div class="thumb">
-                  <img class="img-fluid" src="{% static 'img/blog/pp3.jpg' %}" alt="" />
+                  <img
+                    class="img-fluid"
+                    src="{% static 'img/blog/pp3.jpg' %}"
+                    alt=""
+                  />
                 </div>
                 <div class="details">
                   <a href="blog-single.html"><h6>Astronomy Or Astrology</h6></a>
@@ -381,7 +347,11 @@
               </div>
               <div class="single-post-list d-flex flex-row align-items-center">
                 <div class="thumb">
-                  <img class="img-fluid" src="{% static 'img/blog/pp4.jpg' %}" alt="" />
+                  <img
+                    class="img-fluid"
+                    src="{% static 'img/blog/pp4.jpg' %}"
+                    alt=""
+                  />
                 </div>
                 <div class="details">
                   <a href="blog-single.html"><h6>Asteroids telescope</h6></a>
@@ -392,7 +362,10 @@
           </div>
           <div class="single-sidebar-widget ads-widget">
             <a href="#"
-              ><img class="img-fluid" src="{% static 'img/blog/ads-banner.jpg' %}" alt=""
+              ><img
+                class="img-fluid"
+                src="{% static 'img/blog/ads-banner.jpg' %}"
+                alt=""
             /></a>
           </div>
           <div class="single-sidebar-widget post-category-widget">
