--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -106,7 +106,7 @@
             </ul>
             <div class="user-details row">
               <p class="user-name col-lg-12 col-md-12 col-6">
-                <a href="#">Mark wiens</a>
+                <a href="#">{{post.auth.get_full_name}}</a>
                 <span class="lnr lnr-user"></span>
               </p>
               <p class="date col-lg-12 col-md-12 col-6">
@@ -127,7 +127,7 @@
             <div class="feature-img">
               <img
                 class="img-fluid"
-                src="{% static 'img/blog/feature-img1.jpg' %}"
+                src="{{post.picture.url}}"
                 alt=""
               />
             </div>
