--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% load static %} {% block body %}
+{% extends "base.html" %} {% load static %} {% load blog_tags %} {% block body %}
 <!-- start banner Area -->
 <section class="banner-area relative blog-home-banner" id="home">
   <div class="overlay overlay-bg"></div>
@@ -102,7 +102,7 @@
               <!--{{post.category.all|join:", "}}-->
               
             {% for cat in post.category.all %}
-              <a href="#">
+              <a href="{% url 'blog:category' cat_name=cat.name %}">
                 {{cat}}
               </a>{% if not forloop.last %},{% endif %}
             {% endfor %}
@@ -182,66 +182,13 @@
               <button type="submit"><i class="fa fa-search"></i></button>
             </form>
           </div>
+
           {% include "blog/profile.html" %}
-          <div class="single-sidebar-widget popular-post-widget">
-            <h4 class="popular-title">Popular Posts</h4>
-            <div class="popular-post-list">
-              <div class="single-post-list d-flex flex-row align-items-center">
-                <div class="thumb">
-                  <img
-                    class="img-fluid"
-                    src="{% static 'img/blog/pp1.jpg' %}"
-                    alt=""
-                  />
-                </div>
-                <div class="details">
-                  <a href="blog-single.html"
-                    ><h6>Space The Final Frontier</h6></a
-                  >
-                  <p>02 Hours ago</p>
-                </div>
-              </div>
-              <div class="single-post-list d-flex flex-row align-items-center">
-                <div class="thumb">
-                  <img
-                    class="img-fluid"
-                    src="{% static 'img/blog/pp2.jpg' %}"
-                    alt=""
-                  />
-                </div>
-                <div class="details">
-                  <a href="blog-single.html"><h6>The Amazing Hubble</h6></a>
-                  <p>02 Hours ago</p>
-                </div>
-              </div>
-              <div class="single-post-list d-flex flex-row align-items-center">
-                <div class="thumb">
-                  <img
-                    class="img-fluid"
-                    src="{% static 'img/blog/pp3.jpg' %}"
-                    alt=""
-                  />
-                </div>
-                <div class="details">
-                  <a href="blog-single.html"><h6>Astronomy Or Astrology</h6></a>
-                  <p>02 Hours ago</p>
-                </div>
-              </div>
-              <div class="single-post-list d-flex flex-row align-items-center">
-                <div class="thumb">
-                  <img
-                    class="img-fluid"
-                    src="{% static 'img/blog/pp4.jpg' %}"
-                    alt=""
-                  />
-                </div>
-                <div class="details">
-                  <a href="blog-single.html"><h6>Asteroids telescope</h6></a>
-                  <p>02 Hours ago</p>
-                </div>
-              </div>
-            </div>
-          </div>
+
+          {% latest_posts %}
+          
+          {% postcategories %}
+
           <div class="single-sidebar-widget ads-widget">
             <a href="#"
               ><img
@@ -249,53 +196,6 @@
                 src="{% static 'img/blog/ads-banner.jpg' %}"
                 alt=""
             /></a>
-          </div>
-          <div class="single-sidebar-widget post-category-widget">
-            <h4 class="category-title">Post Catgories</h4>
-            <ul class="cat-list">
-              <li>
-                <a href="#" class="d-flex justify-content-between">
-                  <p>Technology</p>
-                  <p>37</p>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="d-flex justify-content-between">
-                  <p>Lifestyle</p>
-                  <p>24</p>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="d-flex justify-content-between">
-                  <p>Fashion</p>
-                  <p>59</p>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="d-flex justify-content-between">
-                  <p>Art</p>
-                  <p>29</p>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="d-flex justify-content-between">
-                  <p>Food</p>
-                  <p>15</p>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="d-flex justify-content-between">
-                  <p>Architecture</p>
-                  <p>09</p>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="d-flex justify-content-between">
-                  <p>Adventure</p>
-                  <p>44</p>
-                </a>
-              </li>
-            </ul>
           </div>
           <div class="single-sidebar-widget newsletter-widget">
             <h4 class="newsletter-title">Newsletter</h4>
