--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% load static %} {% block body %}
+{% extends "base.html" %} {% load static %} {% load blog_tags %} {% block body %}
 <!-- start banner Area -->
 <section class="relative about-banner">
   <div class="overlay overlay-bg"></div>
@@ -27,20 +27,16 @@
         <div class="single-post row">
           <div class="col-lg-12">
             <div class="feature-img">
-              <img
-                class="img-fluid"
-                src="{{post.picture.url}}"
-                alt=""
-              />
+              <img class="img-fluid" src="{{post.picture.url}}" alt="" />
             </div>
           </div>
           <div class="col-lg-3 col-md-3 meta-details">
             <ul class="tags">
-              <li><a href="#">
-                {% for cat in post.category.all %}
-                {{cat}}
-                {% endfor %}
-                </a></li>
+              <li>
+                <a href="#">
+                  {% for cat in post.category.all %} {{cat}} {% endfor %}
+                </a>
+              </li>
             </ul>
             <div class="user-details row">
               <p class="user-name col-lg-12 col-md-12 col-6">
@@ -52,7 +48,8 @@
                 <span class="lnr lnr-calendar-full"></span>
               </p>
               <p class="view col-lg-12 col-md-12 col-6">
-                <a href="#">{{post.counted_views}} Views</a> <span class="lnr lnr-eye"></span>
+                <a href="#">{{post.counted_views}} Views</a>
+                <span class="lnr lnr-eye"></span>
               </p>
               <p class="comments col-lg-12 col-md-12 col-6">
                 <a href="#">06 Comments</a>
@@ -278,65 +275,7 @@
             </form>
           </div>
           {% include "blog/profile.html" %}
-          <div class="single-sidebar-widget popular-post-widget">
-            <h4 class="popular-title">Popular Posts</h4>
-            <div class="popular-post-list">
-              <div class="single-post-list d-flex flex-row align-items-center">
-                <div class="thumb">
-                  <img
-                    class="img-fluid"
-                    src="{% static 'img/blog/pp1.jpg' %}"
-                    alt=""
-                  />
-                </div>
-                <div class="details">
-                  <a href="blog-single.html"
-                    ><h6>Space The Final Frontier</h6></a
-                  >
-                  <p>02 Hours ago</p>
-                </div>
-              </div>
-              <div class="single-post-list d-flex flex-row align-items-center">
-                <div class="thumb">
-                  <img
-                    class="img-fluid"
-                    src="{% static 'img/blog/pp2.jpg' %}"
-                    alt=""
-                  />
-                </div>
-                <div class="details">
-                  <a href="blog-single.html"><h6>The Amazing Hubble</h6></a>
-                  <p>02 Hours ago</p>
-                </div>
-              </div>
-              <div class="single-post-list d-flex flex-row align-items-center">
-                <div class="thumb">
-                  <img
-                    class="img-fluid"
-                    src="{% static 'img/blog/pp3.jpg' %}"
-                    alt=""
-                  />
-                </div>
-                <div class="details">
-                  <a href="blog-single.html"><h6>Astronomy Or Astrology</h6></a>
-                  <p>02 Hours ago</p>
-                </div>
-              </div>
-              <div class="single-post-list d-flex flex-row align-items-center">
-                <div class="thumb">
-                  <img
-                    class="img-fluid"
-                    src="{% static 'img/blog/pp4.jpg' %}"
-                    alt=""
-                  />
-                </div>
-                <div class="details">
-                  <a href="blog-single.html"><h6>Asteroids telescope</h6></a>
-                  <p>02 Hours ago</p>
-                </div>
-              </div>
-            </div>
-          </div>
+          {% latest_posts %}
           <div class="single-sidebar-widget ads-widget">
             <a href="#"
               ><img
@@ -345,53 +284,7 @@
                 alt=""
             /></a>
           </div>
-          <div class="single-sidebar-widget post-category-widget">
-            <h4 class="category-title">Post Catgories</h4>
-            <ul class="cat-list">
-              <li>
-                <a href="#" class="d-flex justify-content-between">
-                  <p>Technology</p>
-                  <p>37</p>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="d-flex justify-content-between">
-                  <p>Lifestyle</p>
-                  <p>24</p>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="d-flex justify-content-between">
-                  <p>Fashion</p>
-                  <p>59</p>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="d-flex justify-content-between">
-                  <p>Art</p>
-                  <p>29</p>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="d-flex justify-content-between">
-                  <p>Food</p>
-                  <p>15</p>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="d-flex justify-content-between">
-                  <p>Architecture</p>
-                  <p>09</p>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="d-flex justify-content-between">
-                  <p>Adventure</p>
-                  <p>44</p>
-                </a>
-              </li>
-            </ul>
-          </div>
+          {% postcategories %}
           <div class="single-sidebar-widget newsletter-widget">
             <h4 class="newsletter-title">Newsletter</h4>
             <p>
