--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -111,7 +111,7 @@
             </ul>
             <div class="user-details row">
               <p class="user-name col-lg-12 col-md-12 col-6">
-                <a href="#">{{post.auth.get_full_name}}</a>
+                <a href="{% url 'blog:author' author_username=post.auth.username %}">{{post.auth}}</a>
                 <span class="lnr lnr-user"></span>
               </p>
               <p class="date col-lg-12 col-md-12 col-6">
@@ -170,18 +170,7 @@
       </div>
       <div class="col-lg-4 sidebar-widgets">
         <div class="widget-wrap">
-          <div class="single-sidebar-widget search-widget">
-            <form class="search-form" action="#">
-              <input
-                placeholder="Search Posts"
-                name="search"
-                type="text"
-                onfocus="this.placeholder = ''"
-                onblur="this.placeholder = 'Search Posts'"
-              />
-              <button type="submit"><i class="fa fa-search"></i></button>
-            </form>
-          </div>
+          {% include "blog/search.html" %}
 
           {% include "blog/profile.html" %}
 
