--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -50,7 +50,7 @@
                 <span class="lnr lnr-calendar-full"></span>
               </p>
               <p class="view col-lg-12 col-md-12 col-6">
-                <a href="#">{{post.counted_views}} Views</a>
+                <a href="{% url 'blog:single' pid=post.id %}">{{post.counted_views}} Views</a>
                 <span class="lnr lnr-eye"></span>
               </p>
               <p class="comments col-lg-12 col-md-12 col-6">
