--- a/templates/website/contact.html
+++ b/templates/website/contact.html
@@ -54,12 +54,12 @@
       <div class="col-lg-8">
         <form
           class="form-area contact-form text-right"
-          id="myForm"
-          action="mail.php"
+          action="{% url 'website:contact' %}"
           method="post"
         >
           <div class="row">
-            <div class="col-lg-6 form-group">
+            {% csrf_token %}
+            <div class="col-lg-6 form-group"> 
               <input
                 name="name"
                 placeholder="Enter your name"
@@ -103,7 +103,7 @@
             </div>
             <div class="col-lg-12">
               <div class="alert-msg" style="text-align: left"></div>
-              <button class="genric-btn primary" style="float: right">
+              <button type="submit" class="genric-btn primary" style="float: right">
                 Send Message
               </button>
             </div>
