--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -264,8 +264,7 @@
       </div>
       <div class="col-lg-4 sidebar-widgets">
         <div class="widget-wrap">
-          {% include "blog/search.html" %} {% include "blog/profile.html" %} {%
-          latest_posts %}
+          {% include "blog/search.html" %} {% include "blog/profile.html" %} {% latest_posts %}
           <div class="single-sidebar-widget ads-widget">
             <a href="#"
               ><img
@@ -303,23 +302,7 @@
             </div>
             <p class="text-bottom">You can unsubscribe at any time</p>
           </div>
-          <div class="single-sidebar-widget tag-cloud-widget">
-            <h4 class="tagcloud-title">Tag Clouds</h4>
-            <ul>
-              <li><a href="#">Technology</a></li>
-              <li><a href="#">Fashion</a></li>
-              <li><a href="#">Architecture</a></li>
-              <li><a href="#">Fashion</a></li>
-              <li><a href="#">Food</a></li>
-              <li><a href="#">Technology</a></li>
-              <li><a href="#">Lifestyle</a></li>
-              <li><a href="#">Art</a></li>
-              <li><a href="#">Adventure</a></li>
-              <li><a href="#">Food</a></li>
-              <li><a href="#">Lifestyle</a></li>
-              <li><a href="#">Adventure</a></li>
-            </ul>
-          </div>
+          {% include "blog/tags.html" %}
         </div>
       </div>
     </div>
