--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -130,15 +130,17 @@
           </div>
           <div class="col-lg-9 col-md-9">
             <div class="feature-img">
+              <a href="{% url 'blog:single' pid=post.id %}">
               <img
                 class="img-fluid"
                 src="{{post.picture.url}}"
                 alt=""
               />
+            </a>
             </div>
             <a class="posts-title" href="{% url "blog:single" pid=post.id %}"><h3>{{post.title}}</h3></a>
-            <p class="excert">{{post.content|truncatewords:20}}</p>
-            <a href="{% url "blog:single" pid=post.id %}" class="primary-btn">View More</a>
+            <!--<p class="excert">{{post.content|truncatewords:20}}</p>
+            <a href="{% url "blog:single" pid=post.id %}" class="primary-btn">View More</a>-->
           </div>
         </div>
         {% endfor %}
