--- a/templates/website/index.html
+++ b/templates/website/index.html
@@ -198,7 +198,7 @@
         {% for post in posts %}
           <div class="single-recent-blog-post item">
             <div class="thumb">
-              <img class="img-fluid" src="{{post.picture.url}}" alt="" />
+              <a href="{% url 'blog:single' pid=post.id %}"><img class="img-fluid" src="{{post.picture.url}}" alt="" /></a>
             </div>
             <div class="details">
               <div class="tags">
@@ -211,9 +211,9 @@
                 </ul>
               </div>
               <a href="{% url 'blog:single' pid=post.id %}"><h4 class="title">{{post.title}}</h4></a>
-              <p>
+              <!--<p>
                 {{post.content|truncatewords:5}}
-              </p>
+              </p>-->
               <h6 class="date">{{post.published_date|naturaltime}}</h6>
             </div>
           </div>
