--- a/templates/website/contact.html
+++ b/templates/website/contact.html
@@ -55,8 +55,7 @@
         <form
           class="form-area contact-form text-right"
           action="{% url 'website:contact' %}"
-          method="post"
-        >
+          method="post">
           <div class="row">
             {% csrf_token %}
             <div class="col-lg-6 form-group"> 
@@ -98,10 +97,12 @@
                 placeholder="Enter Messege"
                 onfocus="this.placeholder = ''"
                 onblur="this.placeholder = 'Enter Messege'"
-                required=""
-              ></textarea>
+                required=""></textarea>
             </div>
             <div class="col-lg-12">
+              <div class="pb-3">
+                {{form.captcha}}
+              </div>
               <div class="alert-msg" style="text-align: left"></div>
               <button type="submit" class="genric-btn primary" style="float: right">
                 Send Message
