simple comment section

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,10 @@
 		img{
 			border-radius: 10px;
 		}
+		#empty_comment_text{
+			text-align: center;
+			font-size: large
+		}
 	</style>
   </head>
   <body>
@@ -173,7 +177,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<a href="#"><i class="fa fa-behance"></i></a>
 						</div>
 					</div>
-				</div></sc
+				</div></sc>
 			</footer>
 			<!-- End footer Area -->	
 
