--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -115,16 +115,12 @@
                 <span class="lnr lnr-user"></span>
               </p>
               <p class="date col-lg-12 col-md-12 col-6">
-                <a href="#">{{post.published_date|date:'d M Y'}}</a>
+                {{post.published_date|date:'d M Y'}}
                 <span class="lnr lnr-calendar-full"></span>
               </p>
               <p class="view col-lg-12 col-md-12 col-6">
-                <a href="#">{{post.counted_views|intword}} Views</a>
+                {{post.counted_views|intword}} Views
                 <span class="lnr lnr-eye"></span>
-              </p>
-              <p class="comments col-lg-12 col-md-12 col-6">
-                <a href="#">06 Comments</a>
-                <span class="lnr lnr-bubble"></span>
               </p>
             </div>
           </div>
